added report form and got vuetify working.
Currently working on getting data from backend

--- a/MyApp/public/index.html
+++ b/MyApp/public/index.html
@@ -1,11 +1,12 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head lang="en">
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0, maximum-scale=1, minimum-scale=1">
-  <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-  <title>MyApp</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0, maximum-scale=1, minimum-scale=1">
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link href='https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900|Material+Icons' rel="stylesheet">
+    <title>MyApp</title>
 </head>
 <body>
 
@@ -26,10 +27,6 @@
   <div id="app"></div>
 
   <div id="footer" style="text-align:center; position:absolute; bottom:50px; width:100%;">
-    <h4>
-      <img style="height:42px" src="{{ 'servicestack'.svgDataUri('#333') }}" />
-      <a href="https://github.com/NetCoreTemplates/vue-spa">Learn about this Vue template</a>
-    </h4>
     <div>Copyright &copy; {{ now |> dateFormat('yyyy') }}</div>
   </div>
   <!-- built files will be auto injected -->
