--- a/MyApp/ClientApp/public/index.html
+++ b/MyApp/ClientApp/public/index.html
@@ -15,19 +15,17 @@
   {{ 'svg-icons'            |> cssIncludes |> svgFill('#41B883') }}
   {{#script}}
     {{ '/js/hot-fileloader.js'    |> onlyIfDebug |> includeFile }}
-    NAV_ITEMS = {{ 'GetNavItems'  |> execService |> json }};
     AUTH      = {{ 'Authenticate' |> execService({ ifErrorReturn: "null" }) |> json }};
   {{/script}}
   </i>
 
   <noscript>
-    <strong>We're sorry but MyApp doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+    <strong>We're sorry but Report Generator doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
   </noscript>
 
   <div id="app"></div>
 
   <div id="footer" style="text-align:center; position:absolute; bottom:50px; width:100%;">
-    <div>Copyright &copy; {{ now |> dateFormat('yyyy') }}</div>
   </div>
   <!-- built files will be auto injected -->
 </body>
